--- a/gr.css
+++ b/gr.css
@@ -1,72 +1,26 @@
 /*
- * Grid v1.0.0 - ./gr.css
+ * Grid v2.x.x - ./gr.css
  * 
  * Copyright (C) 2016 Guilherme de Andrade Arantes.
- * 
- * This program is free software: copying and distribution of this file,
- * with or without modification, are permitted in any medium without royalty
- * provided the copyright notice and this notice are preserved.
- * 
+ *
  * This work is licensed under the Creative Commons BY SA 4.0 License
  * 
  * Visit [license](http://creativecommons.org/licenses/by-sa/4.0/) or send a letter
  * to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA to view
  * a copy of this licence.
- * 
- * This program is distributed in the hope that it will be useful, but
- * without any warranty; without even the implied warranty of
- * merchantability or fitness for a particular purpose.
- * 
- * Home page: [home](http://guiideandrade.com/proejct/grid)
+ *
  * Git-hub page: [git](https://github.com/guiideandrade/grid.git)
  *
  */
 
 /*
- * You should consider uncommenting this code:
- * See: [this](http://www.paulirish.com/2012/box-sizing-border-box-ftw/)
- *
- * html {
- *   -webkit-box-sizing: border-box;
- *      -moz-box-sizing: border-box;
- *           box-sizing: border-box;
- * }
- * *, *:before, *:after {
- *   -webkit-box-sizing: inherit;
- *      -moz-box-sizing: inherit;
- *           box-sizing: inherit;
- * }
- * .widget, .extern {
- *   -webkit-box-sizing: content-box;
- *      -moz-box-sizing: content-box;
- *           box-sizing: content-box;
- * }
+ * See grid-devel.css and code-you-should-use.css for more specific codes.
  *
  */
 
-/*
- * You should consider uncommenting this code, as we use `rem`
- * See: [this](http://www.w3schools.com/cssref/css_units.asp)
- *
- * html {
- *   font-size: 100%;
- * }
- *
- */
-
-/*
- * (1) I choose to use a wrapper `.row`
- *     this class should be used, in order to float all cols
- *
- * (2) The goal here is to make all cols 100% in small devices
- *     (2.1) :before and :after pseudo-classes are used here
- *           to reset some code and avoid compatibility issues
- *
- */
-
-.row,             /* (1) */
-.col,             /* (2) */
-.row .col:before, /* (2.1) */
+.row,
+.col,
+.row .col:before,
 .row .col:after {
   margin: 0;
   padding: 0;
@@ -77,20 +31,9 @@
   letter-spacing: normal;
 }
 
-/*
- * (1) Actually, I'm going to test it without `.float`
- *
- */
-
 .row .col {
-  display: inline-block; /* (1) */
+  display: inline-block;
 }
-
-/*
- * It's `.clearfix`
- * See: [this](http://cssmojo.com/the-very-latest-clearfix-reloaded/)
- *
- */
 
 .row.float:after {
   content: "";
@@ -98,60 +41,108 @@
   display: block;
 }
 
-/*
- * You may float to the right, if you choose that way
- *
- */
-
-.row.float .col {
+.row.float .col,
+.row.float.left .col {
   float: left;
 }
+.row.float.right .col {
+  float: right;
+}
 
-/*
- * This is default in all viewports
- * It was made for fixed layouts, until you chance in a larger viewport
- *
- */
+.gr-1 .col{width:100%}
+.gr-2 .col{width:50%}
+.gr-3 .col{width:33.333%}
+.gr-4 .col{width:25%}
+.gr-5 .col{width:20%}
+.gr-6 .col{width:16.666%}
+.gr-7 .col{width:14.285%}
+.gr-8 .col{width:12.5%}
 
 .col1-1,
 .col2-2,
 .col3-3,
 .col4-4,
-.col5-5{width:100%}
+.col5-5,
+.col6-6,
+.col7-7,
+.col8-8{width:100%}
 .col1-2,
-.col2-4{width:50%}
-.col1-3{width:33.333%}
-.col2-3{width:66.666%}
-.col1-4{width:25%}
-.col3-4{width:75%}
+.col2-4,
+.col3-6,
+.col4-8{width:50%}
+.col1-3,
+.col2-6{width:33.333%}
+.col2-3,
+.col4-6{width:66.666%}
+.col1-4,
+.col2-8{width:25%}
+.col3-4,
+.col6-8{width:75%}
 .col1-5{width:20%}
 .col2-5{width:40%}
 .col3-5{width:60%}
 .col4-5{width:80%}
+.col1-6{width:16.666%}
+.col5-6{width:83.333%}
+.col1-7{width:14.285%}
+.col2-7{width:28.571%}
+.col3-7{width:42.857%}
+.col4-7{width:57.142%}
+.col5-7{width:71.428%}
+.col6-7{width:85.714%}
+.col1-8{width:12.5%}
+.col3-8{width:37.5%}
+.col5-8{width:62.5%}
+.col7-8{width:87.5%}
 
-/*
- * Classes for small devices
- * It was made for viewports equal or greater than 35.5rem
- * We may say 35.5rem = 568px [if 1rem = 16px]
- *
- */
+.off1-2,
+.off2-4,
+.off3-6,
+.off4-8{margin-left:50%}
+.off1-3,
+.off2-6{margin-left:33.333%}
+.off2-3,
+.off4-6{margin-left:66.666%}
+.off1-4,
+.off2-8{margin-left:25%}
+.off3-4,
+.off6-8{margin-left:75%}
+.off1-5{margin-left:20%}
+.off2-5{margin-left:40%}
+.off3-5{margin-left:60%}
+.off4-5{margin-left:80%}
+.off1-6{margin-left:16.666%}
+.off5-6{margin-left:83.333%}
+.off1-7{margin-left:14.285%}
+.off2-7{margin-left:28.571%}
+.off3-7{margin-left:42.857%}
+.off4-7{margin-left:57.142%}
+.off5-7{margin-left:71.428%}
+.off6-7{margin-left:85.714%}
+.off1-8{margin-left:12.5%}
+.off3-8{margin-left:37.5%}
+.off5-8{margin-left:62.5%}
+.off7-8{margin-left:87.5%}
 
 @media screen and (min-width: 35.5rem) {
+
+  .gr-sm1 .col{width:100%}
+  .gr-sm2 .col{width:50%}
 
   .sm1-1,
   .sm2-2{width:100%}
   .sm1-2{width:50%}
 
+  .off-sm1-2{margin-left:50%}
+
 }
 
-/*
- * Classes for medium devices
- * It was made for viewports equal or greater than 48rem
- * We may say 48rem = 768px [if 1rem = 16px]
- *
- */
-
 @media screen and (min-width: 48rem) {
+
+  .gr-md-1 .col{width:100%}
+  .gr-md-2 .col{width:50%}
+  .gr-md-3 .col{width:33.333%}
+  .gr-md-4 .col{width:25%}
 
   .md1-1,
   .md2-2,
@@ -164,16 +155,23 @@
   .md1-4{width:25%}
   .md3-4{width:75%}
 
+  .off-md1-2,
+  .off-md2-4{margin-left:50%}
+  .off-md1-3{margin-left:33.333%}
+  .off-md2-3{margin-left:66.666%}
+  .off-md1-4{margin-left:25%}
+  .off-md3-4{margin-left:75%}
+
 }
 
-/*
- * Classes for medium devices
- * It was made for viewports equal or greater than 64rem
- * We may say 64rem = 1024px [if 1rem = 16px]
- *
- */
-
 @media screen and (min-width: 64rem) {
+
+  .gr-lg1 .col{width:100%}
+  .gr-lg2 .col{width:50%}
+  .gr-lg3 .col{width:33.333%}
+  .gr-lg4 .col{width:25%}
+  .gr-lg5 .col{width:20%}
+  .gr-lg6 .col{width:16.666%}
 
   .lg1-1,
   .lg2-2,
@@ -197,16 +195,34 @@
   .lg1-6{width:16.666%}
   .lg5-6{width:83.333%}
 
+  .off-lg1-2,
+  .off-lg2-4,
+  .off-lg3-6{margin-left:50%}
+  .off-lg1-3,
+  .off-lg2-6{margin-left:33.333%}
+  .off-lg2-3,
+  .off-lg4-6{margin-left:66.666%}
+  .off-lg1-4{margin-left:25%}
+  .off-lg3-4{margin-left:75%}
+  .off-lg1-5{margin-left:20%}
+  .off-lg2-5{margin-left:40%}
+  .off-lg3-5{margin-left:60%}
+  .off-lg4-5{margin-left:80%}
+  .off-lg1-6{margin-left:16.666%}
+  .off-lg5-6{margin-left:83.333%}
+
 }
 
-/*
- * Classes for medium devices
- * It was made for viewports equal or greater than 80rem
- * We may say 80rem = 1280px [if 1rem = 16px]
- *
- */
-
 @media screen and (min-width: 80rem) {
+
+  .gr-xl1 .col{width:100%}
+  .gr-xl2 .col{width:50%}
+  .gr-xl3 .col{width:33.333%}
+  .gr-xl4 .col{width:25%}
+  .gr-xl5 .col{width:20%}
+  .gr-xl6 .col{width:16.666%}
+  .gr-xl7 .col{width:14.285%}
+  .gr-xl8 .col{width:12.5%}
 
   .xl1-1,
   .xl2-2,
@@ -244,5 +260,34 @@
   .xl3-8{width:37.5%}
   .xl5-8{width:62.5%}
   .xl7-8{width:87.5%}
+
+  .off-xl1-2,
+  .off-xl2-4,
+  .off-xl3-6,
+  .off-xl4-8{margin-left:50%}
+  .off-xl1-3,
+  .off-xl2-6{margin-left:33.333%}
+  .off-xl2-3,
+  .off-xl4-6{margin-left:66.666%}
+  .off-xl1-4,
+  .off-xl2-8{margin-left:25%}
+  .off-xl3-4,
+  .off-xl6-8{margin-left:75%}
+  .off-xl1-5{margin-left:20%}
+  .off-xl2-5{margin-left:40%}
+  .off-xl3-5{margin-left:60%}
+  .off-xl4-5{margin-left:80%}
+  .off-xl1-6{margin-left:16.666%}
+  .off-xl5-6{margin-left:83.333%}
+  .off-xl1-7{margin-left:14.285%}
+  .off-xl2-7{margin-left:28.571%}
+  .off-xl3-7{margin-left:42.857%}
+  .off-xl4-7{margin-left:57.142%}
+  .off-xl5-7{margin-left:71.428%}
+  .off-xl6-7{margin-left:85.714%}
+  .off-xl1-8{margin-left:12.5%}
+  .off-xl3-8{margin-left:37.5%}
+  .off-xl5-8{margin-left:62.5%}
+  .off-xl7-8{margin-left:87.5%}
 
 }
