--- a/grid.css
+++ b/grid.css
@@ -1,72 +1,26 @@
 /*
- * Grid v1.0.0 - ./grid.css
+ * Grid v2.x.x - ./grid.css
  * 
  * Copyright (C) 2016 Guilherme de Andrade Arantes.
- * 
- * This program is free software: copying and distribution of this file,
- * with or without modification, are permitted in any medium without royalty
- * provided the copyright notice and this notice are preserved.
- * 
+ *
  * This work is licensed under the Creative Commons BY SA 4.0 License
  * 
  * Visit [license](http://creativecommons.org/licenses/by-sa/4.0/) or send a letter
  * to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA to view
  * a copy of this licence.
- * 
- * This program is distributed in the hope that it will be useful, but
- * without any warranty; without even the implied warranty of
- * merchantability or fitness for a particular purpose.
- * 
- * Home page: [home](http://guiideandrade.com/proejct/grid)
+ *
  * Git-hub page: [git](https://github.com/guiideandrade/grid.git)
  *
  */
 
 /*
- * You should consider uncommenting this code:
- * See: [this](http://www.paulirish.com/2012/box-sizing-border-box-ftw/)
- *
- * html {
- *   -webkit-box-sizing: border-box;
- *      -moz-box-sizing: border-box;
- *           box-sizing: border-box;
- * }
- * *, *:before, *:after {
- *   -webkit-box-sizing: inherit;
- *      -moz-box-sizing: inherit;
- *           box-sizing: inherit;
- * }
- * .widget, .extern {
- *   -webkit-box-sizing: content-box;
- *      -moz-box-sizing: content-box;
- *           box-sizing: content-box;
- * }
+ * See grid-devel.css and code-you-should-use.css for more specific codes.
  *
  */
 
-/*
- * You should consider uncommenting this code, as we use `rem`
- * See: [this](http://www.w3schools.com/cssref/css_units.asp)
- *
- * html {
- *   font-size: 100%;
- * }
- *
- */
-
-/*
- * (1) I choose to use a wrapper `.row`
- *     this class should be used, in order to float all cols
- *
- * (2) The goal here is to make all cols 100% in small devices
- *     (2.1) :before and :after pseudo-classes are used here
- *           to reset some code and avoid compatibility issues
- *
- */
-
-.row,             /* (1) */
-.col,             /* (2) */
-.row .col:before, /* (2.1) */
+.row,
+.col,
+.row .col:before,
 .row .col:after {
   margin: 0;
   padding: 0;
@@ -77,20 +31,9 @@
   letter-spacing: normal;
 }
 
-/*
- * (1) Actually, I'm going to test it without `.float`
- *
- */
-
 .row .col {
-  display: inline-block; /* (1) */
+  display: inline-block;
 }
-
-/*
- * It's `.clearfix`
- * See: [this](http://cssmojo.com/the-very-latest-clearfix-reloaded/)
- *
- */
 
 .row.float:after {
   content: "";
@@ -98,172 +41,253 @@
   display: block;
 }
 
-/*
- * You may float to the right, if you choose that way
- *
- */
-
-.row.float .col {
+.row.float .col,
+.row.float.left .col {
   float: left;
 }
+.row.float.right .col {
+  float: right;
+}
 
-/*
- * This is default in all viewports
- * It was made for fixed layouts, until you chance in a larger viewport
- *
- */
+.grid-1 .col{width:100%}
+.grid-2 .col{width:50%}
+.grid-3 .col{width:33.33333%}
+.grid-4 .col{width:25%}
+.grid-5 .col{width:20%}
+.grid-6 .col{width:16.66667%}
+.grid-7 .col{width:14.28571%}
+.grid-8 .col{width:12.5%}
 
-.col-1-1{width:100%}
-.col-1-2{width:50%}
-.col-2-2{width:100%}
-.col-1-3{width:33.33333%}
-.col-2-3{width:66.66667%}
-.col-3-3{width:100%}
-.col-1-4{width:25%}
-.col-2-4{width:50%}
-.col-3-4{width:75%}
-.col-4-4{width:100%}
+.col-1-1,
+.col-2-2,
+.col-3-3,
+.col-4-4,
+.col-5-5,
+.col-6-6,
+.col-7-7,
+.col-8-8{width:100%}
+.col-1-2,
+.col-2-4,
+.col-3-6,
+.col-4-8{width:50%}
+.col-1-3,
+.col-2-6{width:33.33333%}
+.col-2-3,
+.col-4-6{width:66.66667%}
+.col-1-4,
+.col-2-8{width:25%}
+.col-3-4,
+.col-6-8{width:75%}
 .col-1-5{width:20%}
 .col-2-5{width:40%}
 .col-3-5{width:60%}
 .col-4-5{width:80%}
-.col-5-5{width:100%}
 .col-1-6{width:16.66667%}
-.col-2-6{width:33.33333%}
-.col-3-6{width:50%}
-.col-4-6{width:66.66667%}
 .col-5-6{width:83.33333%}
-.col-6-6{width:100%}
 .col-1-7{width:14.28571%}
 .col-2-7{width:28.57143%}
 .col-3-7{width:42.85714%}
 .col-4-7{width:57.14286%}
 .col-5-7{width:71.42857%}
 .col-6-7{width:85.71429%}
-.col-7-7{width:100%}
 .col-1-8{width:12.5%}
-.col-2-8{width:25%}
 .col-3-8{width:37.5%}
-.col-4-8{width:50%}
 .col-5-8{width:62.5%}
-.col-6-8{width:75%}
 .col-7-8{width:87.5%}
-.col-8-8{width:100%}
 
-/*
- * Classes for small devices
- * It was made for viewports equal or greater than 35.5rem
- * We may say 35.5rem = 568px [if 1rem = 16px]
- *
- */
+.off-1-2,
+.off-2-4,
+.off-3-6,
+.off-4-8{margin-left:50%}
+.off-1-3,
+.off-2-6{margin-left:33.33333%}
+.off-2-3,
+.off-4-6{margin-left:66.66667%}
+.off-1-4,
+.off-2-8{margin-left:25%}
+.off-3-4,
+.off-6-8{margin-left:75%}
+.off-1-5{margin-left:20%}
+.off-2-5{margin-left:40%}
+.off-3-5{margin-left:60%}
+.off-4-5{margin-left:80%}
+.off-1-6{margin-left:16.66667%}
+.off-5-6{margin-left:83.33333%}
+.off-1-7{margin-left:14.28571%}
+.off-2-7{margin-left:28.57143%}
+.off-3-7{margin-left:42.85714%}
+.off-4-7{margin-left:57.14286%}
+.off-5-7{margin-left:71.42857%}
+.off-6-7{margin-left:85.71429%}
+.off-1-8{margin-left:12.5%}
+.off-3-8{margin-left:37.5%}
+.off-5-8{margin-left:62.5%}
+.off-7-8{margin-left:87.5%}
 
 @media screen and (min-width: 35.5rem) {
 
-  .col-sm-1-1{width:100%}
-  .col-sm-1-2{width:50%}
+  .grid-sm-1 .col{width:100%}
+  .grid-sm-2 .col{width:50%}
+
+  .col-sm-1-1,
   .col-sm-2-2{width:100%}
+  .col-sm-1-2{width:50%}
+
+  .off-sm-1-2{margin-left:50%}
 
 }
-
-/*
- * Classes for medium devices
- * It was made for viewports equal or greater than 48rem
- * We may say 48rem = 768px [if 1rem = 16px]
- *
- */
 
 @media screen and (min-width: 48rem) {
 
-  .col-md-1-1{width:100%}
-  .col-md-1-2{width:50%}
-  .col-md-2-2{width:100%}
+  .grid-dm-1 .col{width:100%}
+  .grid-dm-2 .col{width:50%}
+  .grid-dm-3 .col{width:33.33333%}
+  .grid-dm-4 .col{width:25%}
+
+  .col-md-1-1,
+  .col-md-2-2,
+  .col-md-3-3,
+  .col-md-4-4{width:100%}
+  .col-md-1-2,
+  .col-md-2-4{width:50%}
   .col-md-1-3{width:33.33333%}
   .col-md-2-3{width:66.66667%}
-  .col-md-3-3{width:100%}
   .col-md-1-4{width:25%}
-  .col-md-2-4{width:50%}
   .col-md-3-4{width:75%}
-  .col-md-4-4{width:100%}
+
+  .off-md-1-2,
+  .off-md-2-4{margin-left:50%}
+  .off-md-1-3{margin-left:33.33333%}
+  .off-md-2-3{margin-left:66.66667%}
+  .off-md-1-4{margin-left:25%}
+  .off-md-3-4{margin-left:75%}
 
 }
 
-/*
- * Classes for medium devices
- * It was made for viewports equal or greater than 64rem
- * We may say 64rem = 1024px [if 1rem = 16px]
- *
- */
-
 @media screen and (min-width: 64rem) {
 
-  .col-lg-1-1{width:100%}
-  .col-lg-1-2{width:50%}
-  .col-lg-2-2{width:100%}
-  .col-lg-1-3{width:33.33333%}
-  .col-lg-2-3{width:66.66667%}
-  .col-lg-3-3{width:100%}
+  .grid-lg-1 .col{width:100%}
+  .grid-lg-2 .col{width:50%}
+  .grid-lg-3 .col{width:33.33333%}
+  .grid-lg-4 .col{width:25%}
+  .grid-lg-5 .col{width:20%}
+  .grid-lg-6 .col{width:16.66667%}
+
+  .col-lg-1-1,
+  .col-lg-2-2,
+  .col-lg-3-3,
+  .col-lg-4-4,
+  .col-lg-5-5,
+  .col-lg-6-6{width:100%}
+  .col-lg-1-2,
+  .col-lg-2-4,
+  .col-lg-3-6{width:50%}
+  .col-lg-1-3,
+  .col-lg-2-6{width:33.33333%}
+  .col-lg-2-3,
+  .col-lg-4-6{width:66.66667%}
   .col-lg-1-4{width:25%}
-  .col-lg-2-4{width:50%}
   .col-lg-3-4{width:75%}
-  .col-lg-4-4{width:100%}
   .col-lg-1-5{width:20%}
   .col-lg-2-5{width:40%}
   .col-lg-3-5{width:60%}
   .col-lg-4-5{width:80%}
-  .col-lg-5-5{width:100%}
   .col-lg-1-6{width:16.66667%}
-  .col-lg-2-6{width:33.33333%}
-  .col-lg-3-6{width:50%}
-  .col-lg-4-6{width:66.66667%}
   .col-lg-5-6{width:83.33333%}
-  .col-lg-6-6{width:100%}
+
+  .off-lg-1-2,
+  .off-lg-2-4,
+  .off-lg-3-6{margin-left:50%}
+  .off-lg-1-3,
+  .off-lg-2-6{margin-left:33.33333%}
+  .off-lg-2-3,
+  .off-lg-4-6{margin-left:66.66667%}
+  .off-lg-1-4{margin-left:25%}
+  .off-lg-3-4{margin-left:75%}
+  .off-lg-1-5{margin-left:20%}
+  .off-lg-2-5{margin-left:40%}
+  .off-lg-3-5{margin-left:60%}
+  .off-lg-4-5{margin-left:80%}
+  .off-lg-1-6{margin-left:16.66667%}
+  .off-lg-5-6{margin-left:83.33333%}
 
 }
 
-/*
- * Classes for medium devices
- * It was made for viewports equal or greater than 80rem
- * We may say 80rem = 1280px [if 1rem = 16px]
- *
- */
-
 @media screen and (min-width: 80rem) {
 
-  .col-xl-1-1{width:100%}
-  .col-xl-1-2{width:50%}
-  .col-xl-2-2{width:100%}
-  .col-xl-1-3{width:33.33333%}
-  .col-xl-2-3{width:66.66667%}
-  .col-xl-3-3{width:100%}
-  .col-xl-1-4{width:25%}
-  .col-xl-2-4{width:50%}
-  .col-xl-3-4{width:75%}
-  .col-xl-4-4{width:100%}
+  .grid-xl-1 .col{width:100%}
+  .grid-xl-2 .col{width:50%}
+  .grid-xl-3 .col{width:33.33333%}
+  .grid-xl-4 .col{width:25%}
+  .grid-xl-5 .col{width:20%}
+  .grid-xl-6 .col{width:16.66667%}
+  .grid-xl-7 .col{width:14.28571%}
+  .grid-xl-8 .col{width:12.5%}
+
+  .col-xl-1-1,
+  .col-xl-2-2,
+  .col-xl-3-3,
+  .col-xl-4-4,
+  .col-xl-5-5,
+  .col-xl-6-6,
+  .col-xl-7-7,
+  .col-xl-8-8{width:100%}
+  .col-xl-1-2,
+  .col-xl-2-4,
+  .col-xl-3-6,
+  .col-xl-4-8{width:50%}
+  .col-xl-1-3,
+  .col-xl-2-6{width:33.33333%}
+  .col-xl-2-3,
+  .col-xl-4-6{width:66.66667%}
+  .col-xl-1-4,
+  .col-xl-2-8{width:25%}
+  .col-xl-3-4,
+  .col-xl-6-8{width:75%}
   .col-xl-1-5{width:20%}
   .col-xl-2-5{width:40%}
   .col-xl-3-5{width:60%}
   .col-xl-4-5{width:80%}
-  .col-xl-5-5{width:100%}
   .col-xl-1-6{width:16.66667%}
-  .col-xl-2-6{width:33.33333%}
-  .col-xl-3-6{width:50%}
-  .col-xl-4-6{width:66.66667%}
   .col-xl-5-6{width:83.33333%}
-  .col-xl-6-6{width:100%}
   .col-xl-1-7{width:14.28571%}
   .col-xl-2-7{width:28.57143%}
   .col-xl-3-7{width:42.85714%}
   .col-xl-4-7{width:57.14286%}
   .col-xl-5-7{width:71.42857%}
   .col-xl-6-7{width:85.71429%}
-  .col-xl-7-7{width:100%}
   .col-xl-1-8{width:12.5%}
-  .col-xl-2-8{width:25%}
   .col-xl-3-8{width:37.5%}
-  .col-xl-4-8{width:50%}
   .col-xl-5-8{width:62.5%}
-  .col-xl-6-8{width:75%}
   .col-xl-7-8{width:87.5%}
-  .col-xl-8-8{width:100%}
+
+  .off-xl-1-2,
+  .off-xl-2-4,
+  .off-xl-3-6,
+  .off-xl-4-8{margin-left:50%}
+  .off-xl-1-3,
+  .off-xl-2-6{margin-left:33.33333%}
+  .off-xl-2-3,
+  .off-xl-4-6{margin-left:66.66667%}
+  .off-xl-1-4,
+  .off-xl-2-8{margin-left:25%}
+  .off-xl-3-4,
+  .off-xl-6-8{margin-left:75%}
+  .off-xl-1-5{margin-left:20%}
+  .off-xl-2-5{margin-left:40%}
+  .off-xl-3-5{margin-left:60%}
+  .off-xl-4-5{margin-left:80%}
+  .off-xl-1-6{margin-left:16.66667%}
+  .off-xl-5-6{margin-left:83.33333%}
+  .off-xl-1-7{margin-left:14.28571%}
+  .off-xl-2-7{margin-left:28.57143%}
+  .off-xl-3-7{margin-left:42.85714%}
+  .off-xl-4-7{margin-left:57.14286%}
+  .off-xl-5-7{margin-left:71.42857%}
+  .off-xl-6-7{margin-left:85.71429%}
+  .off-xl-1-8{margin-left:12.5%}
+  .off-xl-3-8{margin-left:37.5%}
+  .off-xl-5-8{margin-left:62.5%}
+  .off-xl-7-8{margin-left:87.5%}
 
 }
