--- a/code-you-should-use.css
+++ b/code-you-should-use.css
@@ -1,5 +1,5 @@
 /*
- * Grid v2.x.x - ./code-you-should-use.css
+ * Grid v2.1.x - ./code-you-should-use.css
  * 
  * Copyright (C) 2016 Guilherme de Andrade Arantes.
  *
